# Labrynth

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  game_config.json  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
config/: default_labyrinth.json  full_labyrinth.json  randomization_settings.json
config/challenges/: combat.json  memory.json  puzzles.json  riddles.json  skills.json
docs/: CONTAINER_DEPLOYMENT.md  FLAG_CONFIGURATION.md
saves/: save1.json  save2.json  test_load.json  test_save.json
scripts/: build-container.sh  build-podman.sh  manage_flag.py  run-compose.sh  run-container.sh  run-podman.sh
src/: __init__.py  main.py
src/challenges/: __init__.py  base.py  combat.py  factory.py  memory.py  puzzle.py  riddle.py  skill.py
src/config/: __init__.py  game_config.py
src/game/: __init__.py  command_parser.py  display.py  engine.py  interfaces.py  inventory.py  map_renderer.py  player.py  progress.py  ui_controller.py  world.py
src/utils/: challenge_content.py  config.py  data_models.py  exceptions.py  labyrinth_generator.py  logging.py  randomization.py  randomization_config.py  save_load.py
tests/: conftest.py  test_challenge_content.py  test_challenge_display_fix.py  test_chamber.py  test_command_parser.py  test_config.py  test_data_models.py  test_display_integration.py  test_display_manager.py  test_exceptions.py  test_game_config.py  test_game_engine.py  test_integration_gameplay.py  test_integration_systems.py  test_inventory.py  test_labyrinth_generator.py  test_logging.py  test_main.py  test_manage_flag_script.py  test_map_border_alignment.py  test_map_command.py  test_map_data_persistence.py  test_map_renderer.py  test_pattern_puzzle_fix.py  test_performance_edge_cases.py  test_player_manager.py  test_progress_tracker_map.py  test_randomization.py  test_riddle_hint_fix.py  test_riddle_hint_integration.py  test_save_load.py  test_smoke_e2e.py  test_ui_controller.py  test_victory_flag.py  test_world_config_integration.py  test_world_manager.py
tests/test_challenges/: __init__.py  test_base.py  test_combat.py  test_factory.py  test_memory.py  test_puzzle.py  test_riddle.py  test_skill.py
