[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "labrynth"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = []

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/__init__.py:__version__"]
branch = "main"
upload_to_vcs_release = true
build_command = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "build", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "C4", "SIM"]
ignore = [
    "S101",   # assert statements are fine in tests
    "S311",   # random is fine for game mechanics, not crypto
    "S110",   # try-except-pass is acceptable for optional feature loading
    "S605",   # shell=True in subprocess — pre-existing, deferred fix
    "B904",   # raise-without-from-inside-except — deferred cleanup
    "B017",   # pytest.raises(Exception) — pre-existing tests, tighten later
    "N818",   # GameException naming — whole-codebase rename, deferred
    "E501",   # line too long — Kiro's original code; tighten in a follow-up
    "SIM102", # nested if — pre-existing style, deferred
    "SIM103", # return negated condition — pre-existing style, deferred
    "SIM105", # contextlib.suppress — pre-existing style, deferred
    "SIM117", # nested with — pre-existing style, deferred
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["venv/", "tests/"]
# Not using strict mode — codebase is a reference implementation before Go rewrite

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
